# minecraft-server-bot

./: .env_template  .gitignore  CHANGELOG.rst  README.rst  ecosystem.config.js  embeds.py  main.py  pyproject.toml  requirements.txt  run.sh  server.py  settings.py  views.py
migrations/models/: 1_20240720233718_update.py
minecraft_server_bot/: __init__.py  bot.py  controller.py  database.py  embeds.py  messages.py  mixins.py  mods.py  server.py  tmux.py  view.py  views.py
minecraft_server_bot/ipify/: __init__.py  api.py
minecraft_server_bot/models/: __init__.py  bot_message.py
